# Dbus-process-to-process

./: CMakeLists.txt  Dockerfile  Readme.md  docker-compose.yaml  env
.devcontainer/: devcontainer.json  docker-compose.yml
apps/: client.cpp  server.cpp
container/: start.sh
go/src/client/: Readme.md  dbus  go.mod  main  main.go
